# thesis-backup-prototype

./: .gitignore  README.md  pyproject.toml
backupprototype/: manage.py
backupprototype/backupprototype/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backupprototype/backups/: admin.py  models.py
backupprototype/backups/admin/: __init__.py  backuptargets.py  filebackups.py
backupprototype/backups/management/commands/: runapscheduler.py
backupprototype/backups/migrations/: 0001_initial.py  0002_alter_backuptarget_client_last_contact_and_more.py  0003_alter_backuptarget_client_last_contact.py  0004_backuptarget_client_error_message_and_more.py  0005_backupjob_backupfilejobs.py  0006_rename_backupfilejobs_backupfilejob.py  0007_backupjob_run_cron.py  0008_backupjob_name.py  0009_backupcontainer.py  0010_rename_backupcontainer_backupcontainervolume.py  0011_delete_backupcontainervolume.py  0012_backupfilejob_name.py  0013_remove_backupfilejob_path_backupfilejobpath.py  0014_backupfilejobpath_fs_type_and_more.py  0015_rename_stat_modify_backupfilejobpath_stat_modified.py
backupprototype/backups/models/: __init__.py  backup.py  file.py
backupprototype/backups/tasks/: __init__.py  backup.py  file.py
doc/: DOCUMENTATION.md  Diagram-Authentication.drawio  backup.drawio
