[project]
name = "thesis-backup-prototype"
authors = [
    {name = "Dennis Meyer", email = "snooops@dns-serve.de"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
    ]

dependencies = [
    "jsonschema",
    "requests",
    "Django",
    "django-apscheduler"
]
version = "0.1"

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "bandit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/snooops/thesis-backup-prototype"
Respository = "https://github.com/snooops/thesis-backup-prototype.git"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203","E701"]
